------------------------------------------------
0.50  Mon Jan 31 20:14:43 EST 2005
    - Added HOST configuration option to access JVM server remotely
    - Fixed bug with paths in Cygwin
    - Fixed bug with regexp that was badly interpreted under the debugger
    - Extended InlineJavaClassLoader from current thread ClassLoader to enable it to work
      properly under Tomcat
    - Fixed bug with longs over 32 bits in length
    - Other minor bug fixes

0.49  
    - Added PerlInterpreter: require/eval Perl code directly from Java
    - Reworked type casting: changes are NOT backwards compatible :(
    - Callbacks can now be called in list context using "@function_name"
    - Renamed PerlNatives stuff
    - Added external command line tool to start/stop a SHARED_JVM server
    - Applied JNI memory leak patch by Jeff Janes
    - Removed exports from Inline::Java::Portable
    - Split and updated documentation

0.47  Sat Feb 14 10:00:00 EST 2004
    - Fixed bugs in portability code and added HPUX, AIX and Solaris specifics
    - Tweaked CLASSPATH directory order
	- Changed port numbers for SHARED_JVM tests in order to avoid clashes
      with running installations
    - Made PerlNatives optional
    
0.46  Web Feb 04 20:00:00 EST 2004
    - Fixed Natives.xs to work with ExtUtils::ParseXS

0.45  Fri Jan 30 20:00:00 EST 2004
    - Fixed Makefile.PL arguments that were getting lost
    - Fixed deprecated require call
    - Fixed support for symbolic links in J2SDK directory
    - Basic support for J2SDK 1.5
    - Added new experimental feature: PerlNatives

0.44  Sun Nov 23 15:47:06 EST 2003
    - Callbacks from multiple threads are now supported
    - Refactored (again...) studying/.jdat/cache stuff
    - Added PRIVATE mode for use with SHARED_JVM
    - Added DEBUGGER mode that launches jdb
    - Fixed memory leak in JNI code (patch submitted by Dave Blob)

0.43  Tue Oct 14 13:18:25 EDT 2003
    - Restored $VERSION in each .pm file