@@ -5,7 +5,7 @@ use strict ;
 use Inline::Java::Protocol ;
 use Carp ;
 
-$Inline::Java::Object::VERSION = '0.49_90' ;
+$Inline::Java::Object::VERSION = '0.49_91' ;
 
 # Here we store as keys the knots and as values our blessed private objects
 my $PRIVATES = {} ;
