@@ -2,6 +2,6 @@ package Inline::Java::PerlNatives ;
 
 use strict ;
 
-$Inline::Java::PerlNatives::VERSION = '0.49_90' ;
+$Inline::Java::PerlNatives::VERSION = '0.49_91' ;
 
 1 ;
