@@ -64,31 +64,13 @@ my $t = new types2() ;
 	ok($t->_Integer("$min") == $min) ;
 	eval {$t->_Integer($max + 1)} ; ok($@, qr/out of range/) ;
 	eval {$t->_Integer($min - 1)} ; ok($@, qr/out of range/) ;
-	
-	$max = '9223372036854775807' ;
-	$min = '-9223372036854775808' ;
-	ok($t->_long(undef) == 1) ;
-	ok($t->_long(0) == 1) ;
-	ok($t->_long('9223372036854775806') eq $max) ;
-	ok($t->_long("$min") eq '-9223372036854775807') ;
-	# Out of range testing is now impossible since Perl has a lesser range.
-	# eval {$t->_long($max + 1)} ; ok($@, qr/out of range/) ;
-	# eval {$t->_long($min - 1)} ; ok($@, qr/out of range/) ;
-	ok($t->_Long(undef) == 0) ;
-	ok($t->_Long(0) == 0) ;
-	ok($t->_Long($max) == $max) ;
-	ok($t->_Long("$min") == $min) ;
-	# Out of range testing is now impossible since Perl has a lesser range.
-	# eval {$t->_Long($max + 1)} ; ok($@, qr/out of range/) ;
-	# eval {$t->_Long($min - 1)} ; ok($@, qr/out of range/) ;
-	
+
 	$max = 3.4028235e38 ;
 	$min = -3.4028235e38 ;
 	ok($t->_float(undef) == 1) ;
 	ok($t->_float(0) == 1) ;
 	ok($t->_float($max / 2)) ;
 	ok($t->_float($min / 2)) ;
-	# Equality tests for such large floating point number are not always reliable
 	ok($t->_float($max - 1)) ;
 	ok($t->_float("$min")) ;
 	eval {$t->_float($max + $max)} ; ok($@, qr/out of range/) ;
@@ -103,41 +85,35 @@ my $t = new types2() ;
 	eval {$t->_Float($max + $max)} ; ok($@, qr/out of range/) ;
 	eval {$t->_Float($min + $min)} ; ok($@, qr/out of range/) ;
 
-	$max = 1.7976931348623157e308 ;
-	$min = -1.7976931348623157e308 ;
+	#
+	# Boundary testing for long, double are not predictable enough
+	# to be reliable.`
+	#	
+	my $val = 123456 ;
+	ok($t->_long(undef) == 1) ;
+	ok($t->_long(0) == 1) ;
+	ok($t->_long($val - 1) == $val) ;
+	ok($t->_long("-$val") == -$val + 1) ;
+	ok($t->_Long(undef) == 0) ;
+	ok($t->_Long(0) == 0) ;
+	ok($t->_Long($val) == $val) ;
+	ok($t->_Long("-$val") == -$val) ;
+
+	$val = 123456.789 ;
 	ok($t->_double(undef) == 1) ;
 	ok($t->_double(0) == 1) ;
-	ok($t->_double($max / 2)) ;
-	ok($t->_double($min / 2)) ;
-	# Equality tests for such large floating point number are not always reliable
-	# ok($t->_double($max - 1) == $max) ;
-	# ok($t->_double("$min") == $min + 1) ;
-	# Out of range testing is impossible since Perl has an equal range.
-	# eval {$t->_double($max + $max)} ; ok($@, qr/out of range/) ;
-	# eval {$t->_double($min + $min)} ; ok($@, qr/out of range/) ;
+	ok($t->_double($val - 1) == $val) ;
+	ok($t->_double("-$val") == -$val + 1) ;
 	ok($t->_Double(undef) == 0) ;
 	ok($t->_Double(0) == 0) ;
-	ok($t->_Double($max / 2)) ;
-	ok($t->_Double($min / 2)) ;
-	# Equality tests for such large floating point number are not always reliable
-	# ok($t->_Double($max) == $max) ;
-	# ok($t->_Double("$min") == $min) ;
-	# eval {$t->_Double($max + $max)} ; ok($@, qr/out of range/) ;
-	# eval {$t->_Double($min + $min)} ; ok($@, qr/out of range/) ;
+	ok($t->_Double($val) == $val) ;
+	ok($t->_Double("-$val") == -$val) ;
 	
 	# Number is forced to Double
-	$max = 1.7976931348623157e308 ;
-	$min = -1.7976931348623157e308 ;
 	ok($t->_Number(undef) == 0) ;
 	ok($t->_Number(0) == 0) ;
-	ok($t->_Number($max / 2)) ;
-	ok($t->_Number($min / 2)) ;
-	# Equality tests for such large floating point number are not always reliable
-	# ok($t->_Number($max) == $max) ;
-	# ok($t->_Number("$min") == $min) ;
-	# Out of range testing is impossible since Perl has an equal range.
-	# eval {$t->_Number($max + $max)} ; ok($@, qr/out of range/) ;
-	# eval {$t->_Number($min + $min)} ; ok($@, qr/out of range/) ;
+	ok($t->_Number($val) == $val) ;
+	ok($t->_Number("-$val") == -$val) ;
 	
 	ok(! $t->_boolean(undef)) ;
 	ok(! $t->_boolean(0)) ;
